--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ html {
 body {
 	font-family: Helvetica,Arial,sans-serif;
 	font-size: 2.0rem;
+	padding: 2.0rem;
 }
 
 h1 {
@@ -21,10 +22,6 @@ h1 {
 p {
 	line-height: 150%;
 	margin-top: 2.0rem;
-}
-
-.slide {
-	margin: 1.0rem;
 }
 
 .title-block {
